# auto-memories

./: CLAUDE.md  Cargo.toml  README.md
.github/workflows/: release.yml
src/: app.rs  main.rs  memory.rs  mutate.rs  ui.rs
