[package]
name = "auto-memories"
version = "0.4.0"
edition = "2021"

[[bin]]
name = "auto-memories"
path = "src/main.rs"

[dependencies]
# ratatui re-exports a version-matched crossterm via `ratatui::crossterm`,
# so we depend on it alone to avoid crossterm version skew.
ratatui = { version = "0.30", features = ["unstable-rendered-line-info"] }
